# src/infrastructure/chatstorage/device_repository.go
@@ -66,6 +66,29 @@ func (r *DeviceRepository) DeleteChatByDevice(deviceID, jid string) error {
 	return r.base.DeleteChatByDevice(deviceID, jid)
 }
 
+func (r *DeviceRepository) StoreChatMediaPolicy(policy *domainChatStorage.ChatMediaPolicy) error {
+	if policy != nil && policy.DeviceID == "" {
+		policy.DeviceID = r.deviceID
+	}
+	return r.base.StoreChatMediaPolicy(policy)
+}
+
+func (r *DeviceRepository) GetChatMediaPolicyByDevice(deviceID, chatJID string) (*domainChatStorage.ChatMediaPolicy, error) {
+	targetDeviceID := deviceID
+	if targetDeviceID == "" {
+		targetDeviceID = r.deviceID
+	}
+	return r.base.GetChatMediaPolicyByDevice(targetDeviceID, chatJID)
+}
+
+func (r *DeviceRepository) DeleteChatMediaPolicyByDevice(deviceID, chatJID string) error {
+	targetDeviceID := deviceID
+	if targetDeviceID == "" {
+		targetDeviceID = r.deviceID
+	}
+	return r.base.DeleteChatMediaPolicyByDevice(targetDeviceID, chatJID)
+}
+
 func (r *DeviceRepository) StoreMessage(message *domainChatStorage.Message) error {
 	return r.base.StoreMessage(message)
 }
@@ -107,6 +130,26 @@ func (r *DeviceRepository) DeleteMessage(id, chatJID string) error {
 
 func (r *DeviceRepository) DeleteMessageByDevice(deviceID, id, chatJID string) error {
 	return r.base.DeleteMessageByDevice(deviceID, id, chatJID)
+}
+
+func (r *DeviceRepository) ListLocalMediaByDeviceChat(deviceID, chatJID string, mediaTypes []string) ([]*domainChatStorage.LocalMediaRecord, error) {
+	targetDeviceID := deviceID
+	if targetDeviceID == "" {
+		targetDeviceID = r.deviceID
+	}
+	return r.base.ListLocalMediaByDeviceChat(targetDeviceID, chatJID, mediaTypes)
+}
+
+func (r *DeviceRepository) ListLocalMediaForEphemeralPolicies(mediaTypes []string) ([]*domainChatStorage.LocalMediaRecord, error) {
+	return r.base.ListLocalMediaForEphemeralPolicies(mediaTypes)
+}
+
+func (r *DeviceRepository) ClearLocalMediaPathByDevice(deviceID, chatJID, messageID, localMediaPath string) error {
+	targetDeviceID := deviceID
+	if targetDeviceID == "" {
+		targetDeviceID = r.deviceID
+	}
+	return r.base.ClearLocalMediaPathByDevice(targetDeviceID, chatJID, messageID, localMediaPath)
 }
 
 func (r *DeviceRepository) StoreSentMessageWithContext(ctx context.Context, messageID string, senderJID string, recipientJID string, content string, timestamp time.Time, msg *waE2E.Message) error {
